--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT = 3001
-DB_USER = postgres
-DB_HOST = localhost
-DB_NAME = todo
-DB_PASSWORD = 3551
+PORT = 10000
+DB_USER = root
+DB_HOST = dpg-cnqo80ud3nmc7394nt3g-a.oregon-postgres.render.com
+DB_NAME = todo_ygtc
+DB_PASSWORD = r1kFHEdmYTqBxuuO1oIxYVcmtT2HOLvi
 DB_PORT = 5432
